# VASP-LSP

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  PLAN.md  README.md  coverage.json  index.md  log.md  pyproject.toml
.github/workflows/: ci.yml
.maintenance/: last-run.md
docs/: DIAGNOSTIC_ENGINE_V1.md  LLM-WIKI-PLAN.md  architecture.md
editors/vscode/: README.md  extension.ts  language-configuration.json  package-lock.json  package.json
editors/vscode/snippets/: incar.json
editors/vscode/syntaxes/: vasp-in.tmLanguage.json  vasp-kpoints.tmLanguage.json  vasp-poscar.tmLanguage.json
examples/: KPOINTS  POSCAR
raw/assets/: README.md  docs__user-guide.md  docs__validation-contract.md  examples__INCAR  pyproject.toml
src/vasp_lsp/: __init__.py  server.py  tool.py
src/vasp_lsp/features/: __init__.py  completion.py  diagnostics.py  formatting.py  hover.py  navigation.py  quickfixes.py
src/vasp_lsp/parsers/: __init__.py  incar_parser.py  kpoints_parser.py  poscar_parser.py  potcar_parser.py  vasp_log_parser.py
src/vasp_lsp/schemas/: __init__.py  incar_tags.py  vasp_error_patterns.py
tests/: test_agent_operations_cli_coverage.py  test_basic.py  test_coverage_100.py  test_coverage_100_final.py  test_coverage_boost.py  test_coverage_gaps.py  test_coverage_missing.py  test_diagnostic_ranges_contract.py  test_document_symbols.py  test_enhanced_diagnostics.py  test_exception_handlers.py  test_explicit_line_mode.py  test_extra.py  test_features.py  test_features_detailed.py  test_final_100_coverage.py  test_final_100_percent.py  test_final_boost.py  test_final_coverage.py  test_final_exception.py  test_final_missing.py  test_formatting.py  test_formatting_coverage.py  test_formatting_coverage_final.py  test_formatting_final.py  test_incar_parser.py  test_incar_potcar_poscar_validation.py  test_integration_coverage.py  test_kpoints_expanded_diagnostics.py  test_kpoints_parser.py  test_lsp_integration.py  test_main_call.py  test_main_script.py  test_navigation_lsp.py  test_p1_diagnostics.py  test_parsers.py  test_performance.py  test_plan24_cli.py  test_plan24_preflight.py  test_poscar_expanded_diagnostics.py  (+14 more)
tests/fixtures/real_world/pymatgen/: KPOINTS_monkhorst  README.md
tests/validation/: __init__.py
wiki/concepts/: VASP_Input_Validation.md
wiki/entities/: VASP_LSP.md
wiki/synthesis/: Agent_Workflow.md
